# preprocess-utils

./: Dockerfile.demisto  README.md  pyproject.toml
examples/m365/: M365_alert.json  preprocess.py
