[tool.poetry]
name = "preprocess-utils"
version = "0.0.1"
description = ""
authors = ["David choque Llanos <david.choquellanos.ext@telefonica.com>", "Josep Año Gosp <e.orquestacion01.tcct@telefonica.com>"]
readme = "README.md"
packages = [{include = "preprocess_utils"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.4.2"
pycountry = "^22.3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
